[package]
name = "ckb-on-chain-stat-extractor"
description = "A tool used to extract on chain contract stats from Nervos CKB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-mock-tx-types = "=0.105.1"
ckb-script = { version="=0.105.1", features = ["asm"] }
ckb-jsonrpc-types = "=0.105.1"
ckb-types = "=0.105.1"
ckb-hash = "=0.105.1"
ckb-sdk = "2.3.1"

chrono = "0.4.23"
clap = { version = "4.0.27", features = ["cargo"] }
csv = "1.1.6"
serde = { version = "1.0.148", features = ["derive"] }
